--- a/Blase.Server/ClientApp/src/style/style.css
+++ b/Blase.Server/ClientApp/src/style/style.css
@@ -14,6 +14,10 @@
     label {
         @apply cursor-pointer;
     }
+    
+    a:hover {
+        @apply underline;
+    }
 }
 
 @layer components {
